--- a/site/index.html
+++ b/site/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
 <html>
 <head>
 	<meta charset="utf-8">
@@ -7,6 +6,9 @@
 	<title>My Site</title>
 </head>
 <body>
+	<a href="https://lh3.googleusercontent.com/M-FxPga9Urw0dn2NV_gynMyE8m9Doedg4Q0qMrh-WdzEp8QtgQrw-b3S5uV77WinQDPJEDdwXYHnU3P725AcUnPHKbkT7uj0F2Jb15QlEgQY5J44EfuXKkzZ0FiqJ9xSuSJvssAJBw=w2400?source=screenshot.guru"> <img src="https://lh3.googleusercontent.com/M-FxPga9Urw0dn2NV_gynMyE8m9Doedg4Q0qMrh-WdzEp8QtgQrw-b3S5uV77WinQDPJEDdwXYHnU3P725AcUnPHKbkT7uj0F2Jb15QlEgQY5J44EfuXKkzZ0FiqJ9xSuSJvssAJBw=w600-h315-p-k" width="300" /> </a>
    <h1>Welcome To My Site</h1>
+   <p>I am writing to you for the position of backend developer, <br>I have IBM Data Science Professional Certificate. So, if given the opportunity I am going to make things happen.
+   </p>
 </body>
 </html>
